--- a/index.html
+++ b/index.html
@@ -1,66 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ChristmasCountdown</title>
+	<title>GracesChristmasCountdown</title>
+	<link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<table>
-		<tr>
-			<td colspan="4">Christmas Countdown</td>
-		</tr>
-		<tr>
-			<td id="days">00</td>
-			<td id="hours">00</td>
-			<td id="minutes">00</td>
-			<td id="seconds">00</td>
-		</tr>
-		<tr>
-			<td>Days</td>
-			<td>Hours</td>
-			<td>Minutes</td>
-			<td>Seconds</td>
-		</tr>
-	</table>
 
-	<script type="text/javascript">
+	<div id="title">
+		<h1>Grace's Christmas Countdown</h1>
+	</div>
 
-		function countdown() {
-			var now = new Date();
-			var christmasDate = new Date(now.getFullYear(), 11, 25);
-
-			var currentTime = now.getTime();
-			var christmasTime = christmasDate.getTime();
-
-			var remTime = christmasTime - currentTime;
-
-			var s = Math.floor(remTime / 1000);
-			var m = Math.floor(s / 60);
-			var h = Math.floor(m / 60);
-			var d = Math.floor(h / 24);
-
-			s %= 60;
-			m %= 60;
-			h %= 24;
-
-			h = (h < 10) ? "0" + h : h;
-			m = (m < 10) ? "0" + m : m;
-			s = (s < 10) ? "0" + s : s;
-
-			document.getElementById("days").textContent = d;
-			document.getElementById("days").innerText = d;
-
-			document.getElementById("hours").textContent = h;
-			document.getElementById("minutes").textContent = m;
-			document.getElementById("seconds").textContent = s;
-
-			setTimeout(countdown, 1000);
-
-		}
-
-		countdown();
-
-	</script>
-
+	<div id="countdown">
+		<table>
+			<tr>
+				<td id="days">00</td>
+				<td id="hours">00</td>
+				<td id="minutes">00</td>
+				<td id="seconds">00</td>
+			</tr>
+			<tr>
+				<th>Days</th>
+				<th>Hours</th>
+				<th>Minutes</th>
+				<th>Seconds</th>
+			</tr>
+		</table>
+	</div>
+	
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
