change css table to grid layout, edited jscript

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>GracesChristmasCountdown</title>
-	<link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@700&display=swap" rel="stylesheet">   
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
@@ -12,20 +13,14 @@
 	</div>
 
 	<div id="countdown">
-		<table>
-			<tr>
-				<td id="days">00</td>
-				<td id="hours">00</td>
-				<td id="minutes">00</td>
-				<td id="seconds">00</td>
-			</tr>
-			<tr>
-				<th>Days</th>
-				<th>Hours</th>
-				<th>Minutes</th>
-				<th>Seconds</th>
-			</tr>
-		</table>
+		<p id="days">00</p>
+		<p id="hours">00</p>
+		<p id="minutes">00</p>
+		<p id="seconds">00</p>
+		<p class="timeunit">Days</p>
+		<p class="timeunit">Hours</p>
+		<p class="timeunit">Mins</p>
+		<p class="timeunit">Secs</p>
 	</div>
 	
 	<script type="text/javascript" src="script.js"></script>
