added media query

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>GracesChristmasCountdown</title>
-	 <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
-	 <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@700&display=swap" rel="stylesheet">   
+	<link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@700&display=swap" rel="stylesheet">   
 	<link rel="stylesheet" type="text/css" href="./style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -24,6 +25,7 @@
 	</div>
 	
 	<script type="text/javascript" src="script.js"></script>
+
 	<style>
   #snowflakeContainer {
     position: absolute;
