--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<p id="hours">00</p>
 		<p id="minutes">00</p>
 		<p id="seconds">00</p>
-		<p class="timeunit">Days</p>
-		<p class="timeunit">Hours</p>
-		<p class="timeunit">Mins</p>
-		<p class="timeunit">Secs</p>
+		<p class="timeunit" id="dayslbl">Days</p>
+		<p class="timeunit" id="hourslbl">Hours</p>
+		<p class="timeunit" id="minslbl">Mins</p>
+		<p class="timeunit" id="secslbl">Secs</p>
 	</div>
 	
 	<script type="text/javascript" src="script.js"></script>
@@ -59,7 +59,7 @@
   var browserHeight;
 
   // Specify the number of snowflakes you want visible
-  var numberOfSnowflakes = 50;
+  var numberOfSnowflakes = 150;
 
   // Flag to reset the position of the snowflakes
   var resetPosition = false;
