added a christmas suprise

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 		<p class="timeunit" id="minslbl">Mins</p>
 		<p class="timeunit" id="secslbl">Secs</p>
 	</div>
+
+	<div id="chrimbo_suprise">
+		<h2>It's CHRISTMASSSSSS!!!!!!</h2>
+		<p class="fig">You have been visited by the magical Christmas dogs</p>
+		<div id="dogs">
+			<img class="dog_img" src="christmas_dog.JPG">
+			<img class="dog_img" src="belle.jpg">
+		</div>
+	</div>
 	
 	<script type="text/javascript" src="script.js"></script>
 
