--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<audio id="myMusic">
+  <source src="music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 	<div id="title">
 		<h1>Grace's Christmas Countdown</h1>
 	</div>
@@ -31,6 +36,7 @@
 			<img class="dog_img" src="christmas_dog.JPG">
 			<img class="dog_img" src="belle.jpg">
 		</div>
+    <h2>Merry Christmas!!!</h2>
 	</div>
 	
 	<script type="text/javascript" src="script.js"></script>
