--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p class="fig">You have been visited by the magical Christmas dogs</p>
 		<div id="dogs">
 			<img class="dog_img" src="christmas_dog.JPG">
-			<img class="dog_img" src="belle.jpg">
+			<img class="dog_img" src="belle.JPG">
 		</div>
     <h2>Merry Christmas!!!</h2>
 	</div>
